# Dradis-MCP

./: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  python.gitignore  requirements.txt  test-connection.js  test_connection.py  tsconfig.json
docs/: Create Project MCP.md  Create Vulnerability.md  Get Project Details.md  Get Simple Vulnerability List.md  Get Vulnerability MCP.md  HTTP_Endpoints.md  Set Project MCP.md  System and User Prompt.md  Update Vulnerability.md
dradis_mcp/: __init__.py  api.py  config.py  server.py  types.py
src/: api.ts  config.ts  server.ts  types.ts
